# billing-contest

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  schema.sql
app/: bank_client.py  bootstrap.py  config.py  database.py  enums.py  exceptions.py  main.py  models.py  schemas.py  services.py
app/bank/: base_client.py  client.py  data_wrapper.py
tests/: conftest.py  test_payments_service.py
